--- a/app/views/users/call_to_action.html.haml
+++ b/app/views/users/call_to_action.html.haml
@@ -13,4 +13,4 @@
   =link_to "#{@url}", "#{@username}"
 %h5.away-from-edge Place in the bio page of your favorite apps
 .add-bio-pic
-  .cursor-pic
+  /.cursor-pic
