--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -145,6 +145,28 @@
     padding: 0 0 0 0px;
 }*/
 
+.error{
+  color: red !important;
+  font-size: 18px;
+  text-indent: 10px;
+  float: none !important;
+}
+
+label.active{
+}
+
+#username-field-error::after { 
+    content: "Username Taken";
+    color: red;
+    font-weight: bold;
+    opacity: 0;
+    margin-top: 250px;
+}
+
+.indented{
+  text-indent: 10px;
+}
+
 .search-placeholder{
   margin-top: 25px;
   margin-bottom: 25px;
@@ -198,6 +220,10 @@
 
 .margin {
   margin: 5px;
+}
+
+.new-user {
+  text-indent: 10px !important;
 }
 
 .new-account-form {
