--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -28,10 +28,10 @@
 					%p#show-title{:className => "song-description"}
 					#song-display.mysong-main
 
-
-- if @user == current_user
-	= react_component 'Player'
-	= react_component 'PlayMixtape', { current_user: current_user, mixtape_id: @mixtape_id, author_id: @user.id, play_method: @user.playMethod }
+- if @user
+	- if @user == current_user
+		= react_component 'Player'
+		= react_component 'PlayMixtape', { current_user: current_user, mixtape_id: @mixtape_id, author_id: @user.id, play_method: @user.playMethod }
 
 #column-right
 
