--- a/app/views/users/call_to_action.html.haml
+++ b/app/views/users/call_to_action.html.haml
@@ -7,10 +7,21 @@
 %h1.away-from-edge Congratulations! You just created your account.
 %h5.away-from-edge Let people know your favorite song
 
-.change-profile-pic
 %h5.away-from-edge Here is your custom page: 
 %h5.away-from-edge 
   =link_to "#{@url}", "#{@username}"
 %h5.away-from-edge Place in the bio page of your favorite apps
-.add-bio-pic
-  /.cursor-pic
+
+%div
+  .select-profile-pic
+
+%div
+  .edit-profile-pic
+
+%div
+  .add-to-bio-pic
+
+/.change-profile-pic
+/.add-bio-pic
+/.cursor-pic
+
