--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -252,6 +252,15 @@
   margin-left: 10px !important;
 }
 
+.vertical-spacing {
+  margin-top: 15px !important;
+  margin-bottom: 15px !important;
+}
+
+.word-spacing {
+  padding: 10px;
+}
+
 .upload-picture {
   position: relative;
   width: 500px;
