--- a/app/views/users/confirm_picture.html.haml
+++ b/app/views/users/confirm_picture.html.haml
@@ -1,7 +1,7 @@
 = stylesheet_link_tag "registrations.css" 
 = render 'layouts/nolognav'
 
-%h1.away-from-edge Confirm Profile Picture
+%h1.away-from-edge.vertical-spacing Confirm Profile Picture
 
 .nav-button#new-profile-pic
   Choose Profile Picture
